@@ -25,6 +25,7 @@ PostGIS 2.4.9
   - #4646, Fix gserialized_cmp incorrect comparison (dkvash)
   - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
   - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
+  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)
 
 
 PostGIS 2.4.8
